infra/k8s/auth-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-serv
spec:
  selector:
    app: auth
  ports: 
    - protocol: TCP
      port: 3000
      targetPort: 3000
